# idadv_dash_simulator

./: .gitignore  main.py  pyproject.toml  run_dashboard.py  run_simulator.py  setup.py  simulator.py
config/: simulation_config.py
dashboard/: __init__.py  layout.py  simulation.py
dashboard/callbacks/: __init__.py  economy.py  locations.py  progression.py  tapping.py
utils/: export.py  plotting.py  validation.py
workflow/: location.py  tapping.py  workflow.py
