[project]
name = "idadv_dash_simulator"
version = "0.1.0"
description = "IDA Dashboard Simulator"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "dash==2.14.0",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "pandas==2.1.2",
    "plotly==5.18.0",
    "numpy==1.26.1",
]
requires-python = ">=3.9"
